name:                iplayer-podcast
version:             0.1.1
author:              Joshua Goodwin
maintainer:          j@joshuagoodw.in
build-type:          Simple
cabal-version:       >=1.20

executable iplayer-podcast
  main-is:           iplayer-podcast.hs
  build-depends:     base, HTTP, xml ==1.3.*, datetime ==0.2.*, MissingH ==1.3.*, directory ==1.2.*
