name:                iplayer-podcast
version:             0.3
author:              Joshua Goodwin
maintainer:          j@joshuagoodw.in
build-type:          Simple
cabal-version:       >=1.10

executable iplayer-podcast
  main-is:           iplayer-podcast.hs
  build-depends:     base, HTTP, xml ==1.3.*, datetime ==0.3.*, MissingH ==1.4.*, directory ==1.2.*
  default-language:  Haskell2010
