name:                iplayer-podcast
version:             0.3
author:              Joshua Goodwin
maintainer:          j@joshuagoodw.in
build-type:          Simple
cabal-version:       >=1.10

executable iplayer-podcast
  main-is:           iplayer-podcast.hs
  build-depends:     base, HTTP, xml >=1.3.14, datetime >=0.3.1, MissingH >=1.4.3.0, directory >=1.3.7.0
  default-language:  Haskell2010
